优化watch等逻辑